# SerphantomApplication

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
advertisements/: README.md
advertisements/advertisements/: asgi.py  config.py  settings.py  urls.py  wsgi.py
advertisements/application/: admin.py  apps.py  device.py  forms.py  models.py  urls.py  views.py
advertisements/application_windows/: admin.py  apps.py  models.py  urls.py  views.py
advertisements/development/: ERROR
advertisements/device/: device.py
advertisements/main/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
advertisements/media/: README.md
advertisements/templates/: 404.html  base.html  base_user.html  welcome.html
advertisements/templates/application_android/: add-android-post.html  add-application.html  application.html  index.html
advertisements/templates/application_general/: add-application.html  application.html
advertisements/templates/application_windows/: add-application.html  add-windows-post.html  application.html  index.html
advertisements/templates/main/: 404.html  welcome.html
advertisements/templates/user/: login.html  register.html
advertisements/user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
data/: README.md
development/: data.py  device.py
docs/: Architecture.md
docs/advertisements/: README.md
docs/advertisements/templates/: README.md
