[tool.poetry]
name = "serphantomapplication"
version = "0.1.0"
description = ""
authors = ["Sergey Lebedev <sergejlebedev31838@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
pyopenssl = "^23.3.0"
werkzeug = "^3.0.1"
django = "5.0.6"
django-extensions = "3.2.3"
colorama = "^0.4.6"
user-agents = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
